# COMP3215

./: MKW41Z512xxx4.mex  README.md  hello.cpp  makefile
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Blinky.1510500475980.pdom  Blinky.language.settings.xml  BlinkyProject_Generator_Blinky_Gen.1510502679320.pdom  BlinkyProject_Generator_Blinky_Gen.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.make.core/: BlinkyProject_Generator_Blinky_Gen.sc
.metadata/.plugins/org.eclipse.core.resources/: 1.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/Blinky/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/Blinky/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Blinky/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/BlinkyProject_Generator_Blinky_Gen/: .location  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/BlinkyProject_Generator_Blinky_Gen/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/BlinkyProject_Generator_Blinky_Gen/.indexes/e5/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/BlinkyProject_Generator_Blinky_Gen/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  3.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/11/46/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Blinky/: Blinky.mex  CMakeLists.txt  ProjectGeneration.gen  build_all.bat  build_debug.bat
Blinky/source/: main.c
Blinky_Keil/: Blinky.uvguix.lewis  Blinky.uvoptx  Blinky.uvprojx  Blinky_Keil.uvguix.lewis  Blinky_Keil.uvmpw  Blinky_Keil.uvmpw.uvgui.lewis  Blinky_Keil.uvoptx  Blinky_Keil.uvprojx  JLinkLog.txt  ProjectGeneration.gen  main.c
Blinky_Keil/Listings/: Blinky.map  startup_mkw41z4.lst
Blinky_Keil/Objects/: Blinky.axf  Blinky.build_log.htm  Blinky.htm  Blinky.lnp  Blinky_Target 1.dep  freertos_evr.crf  freertos_evr.d  heap_4.crf  heap_4.d  led_frdm-kw41z.crf  led_frdm-kw41z.d  list.crf  list.d  main.crf  main.d  port.crf  port.d  queue.crf  queue.d  system_mkw41z4.crf  system_mkw41z4.d  tasks.crf  tasks.d  timers.crf  timers.d
Blinky_Keil/RTE/_Target_1/: RTE_Components.h
Blinky_Keil/board/: pin_mux.c
Blinky_Keil/debug/: Blinky_Keil_Blinky_Keil Debug.dep  board.crf  board.d  clock_config.crf  clock_config.d  cproject_templates.build_log.htm  cproject_templates.htm  cproject_templates.lnp  cproject_templates.out  croutine.crf  croutine.d  event_groups.crf  event_groups.d  fsl_clock.crf  fsl_clock.d  fsl_common.crf  fsl_common.d  fsl_debug_console.crf  fsl_debug_console.d  fsl_gpio.crf  fsl_gpio.d  fsl_lpuart.crf  fsl_lpuart.d  fsl_lpuart_freertos.crf  fsl_lpuart_freertos.d  fsl_tickless_lptmr.crf  fsl_tickless_lptmr.d  fsl_tickless_systick.crf  fsl_tickless_systick.d  heap_4.crf  heap_4.d  list.crf  list.d  main.crf  main.d  pin_mux.crf  pin_mux.d  port.crf  port.d  queue.crf  (+8 more)
Blinky_Keil/output/: cproject_templates.map  startup_mkw41z4.lst
Blinky_Keil/source/: main.c
Blinky_MCU/Blinky/Project_Generator_Blinky_Gen/: .cproject  .project  BlinkyProject_Generator_Blinky_Gen JLink Debug.launch  BlinkyProject_Generator_Blinky_Gen JLink Release.launch
Blinky_MCU/Blinky/Project_Generator_Blinky_Gen/board/: clock_config.c
Blinky_MCU/Blinky/Project_Generator_Blinky_Gen/source/: main.c
Blinky_MCU/Blinky_Gen/: Blinky_Gen.mex  Blinky_Gen.xml  ProjectGeneration.gen
Blinky_MCU/Blinky_Gen/source/: main.c
Blinky_MCUXpresso/Blinky/: .cproject  .project
Blinky_MCUXpresso/Blinky/source/: Blinky.c
Blinky_Makefile/: makefile
Blinky_Makefile/board/: pin_mux.h
Blinky_Makefile/source/: main.c
GCC CMake/: Blinky.mex  CMakeLists.txt  ProjectGeneration.gen  build_release.bat
GCC_Make/: Blinky.elf
Temp/: clock_config.h  main.c
